# esp32-ip-to-geolocation

./: diagram.json  pytest.ini  pytest.yaml  pytest_esp32-ip-to-geolocation.py  requirements.txt  sdkconfig.defaults  sdkconfig.json  test_esp32-ip-to-geolocation.py  wokwi.toml
.github/workflows/: README.md  build_and_test.yml  espidf-compile-v5.1.yml
main/: 0014-espressif_esp32_send_data.cpp  CMakeLists.txt  Kconfig  esp32-ip-to-geolocation.c  esp32-ip-to-geolocation.h  main.c
